--- a/npcs/stars_from_afar_billowing_clouds.yaml
+++ b/npcs/stars_from_afar_billowing_clouds.yaml
@@ -214,8 +214,8 @@ npc:
     # Required.
     # Max length per occupation: ...
     #
+    occupation:
     - Merchant
-    
 
     #
     # D & D classes (case insensitive):
@@ -296,7 +296,6 @@ npc:
     #
     tendencies:
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -312,7 +311,6 @@ npc:
     - Common
     - Tabaxi
     - Elvish
-
 
     #
     # Factions:
@@ -331,8 +329,8 @@ npc:
     #
     # Optional.  0 or more.
     #
+    Factions:
     - N/A
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -384,7 +382,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Kinna get bettah wit gidgets, innit?", "Iffin ya git yer rewards, what'll ya duu widdout em?"
+    expressions:
+    - "Kinna get bettah wit gidgets, innit?"
+    - "Iffin ya git yer rewards, what'll ya duu widdout em?"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -408,7 +408,7 @@ npc:
     #
     motivations: |
       Afar seeks to create greatness from garbage. This began with Hijack, his steel mastiff.
-      
+
     #
     # Passions:
     #
@@ -417,7 +417,7 @@ npc:
     #
     passions: |
       Recyclying. Inventions. Shiny balls (orbs, gems, etc.)
-      
+
     #
     # Vulnerabilities:
     #
@@ -426,7 +426,7 @@ npc:
     #
     vulnerabilities: |
       He's not very smart
-      
+
     #
     # Secrets:
     #
@@ -435,8 +435,7 @@ npc:
     #
     secrets: | 
       he occasionally helps smuggle goods passed port officials
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -461,70 +460,69 @@ npc:
   #
   specialties:
     skills: 
+    - Tabaxi Abilities:
+      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+        Feline Agility: Your reflexes and agility allow you to move with a burst of speed. When you move on your tum in combat, you can double your speed until the end of the tum. Once you use this trait, you can't use it again
+                        until you move 0 feet on one of your turns.
+        Cats Claws: Because of your claws, you have a climbing speed of 20 feet. In addition, your claws are natural weapons, which you can use to make unarmed strikes. If you hit with them, you deal slashing damage equal to 
+                    1d4 + your Strength modifier, instead of the bludgeoning damage normal for an unarmed strike.
+        Cats Talent: You have proficiency in the Perception and Stealth skills
+      Artificer Abilities:
+      - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+        Spellcasting:
+        - Description: Requires Tinker's Tools as Spellcasting focus
+          Spell DC: 15
+          Cantrip: Mage Hand, Mending
+          1st Level: False Life, Grease, Detect Magic, Expiditious Retreat 
+          2nd Level: Heat Metal, Invisibility 
+        Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately.
+        Infusions Known: 4     
+        The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
+      Battle Smith Abilities:
+      - Tool Proficiency: Proficiency with Tinker's Tools, Thieve's Tools and Smith's Tools
+        Spellcasting: 
+        - Description: Requires Tinker's Tools as Spellcasting focus
+          Spell DC: 15
+          3rd Level: Heroism, Shield
+          5th Level: Branding Smite, Warding Bond
+        Battle Ready: Proficient with Martial Weapons. When attacking with magic weapons can add intelligence modifier instead of strength or dexterity modifier to attack and damage rolls
+        Steel Defender: Can build a clockwork creature with the Steel Defender Stat Block once per long rest
+        Extra Attack: Can take a second attack action each turn
+      Steel Defender Abilities:
+      - Description: Iron Mastiff
+        Armor Class: 15
+        Hit Points: 2+ your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
+        Speed: 40
+        str: 14
+        dex: 12
+        con: 14
+        int: 4
+        wis: 10
+        cha: 6
+        Proficiencies: Proficiency Bonus + - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
+        Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
+        Darkvision: 60ft. Passive Perception 22
+        Vigilant: Can't be surprised
+        Force Empowered Rend: Using a + Spellcasting modifier to hit one target within 5ft. Deals 1d8+PB force damage.
+        Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
+        Extra Attack: Can take a second attack action each turn
+        Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
+                        The attacker takes 1d4+8 force damage. 
+        Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
 
-   - - Tabaxi Abilities:
-       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
-       - Feline Agility: Your reflexes and agility allow you to move with a burst of speed. When you move on your tum in combat, you can double your speed until the end of the tum. Once you use this trait, you can't use it again
-                         until you move 0 feet on one of your turns.
-       - Cats Claws: Because of your claws, you have a climbing speed of 20 feet. In addition, your claws are natural weapons, which you can use to make unarmed strikes. If you hit with them, you deal slashing damage equal to 
-                     1d4 + your Strength modifier, instead of the bludgeoning damage normal for an unarmed strike.
-       - Cats Talent: You have proficiency in the Perception and Stealth skills
-        
-   - - Artificer Abilities:
-       - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 15
-         Cantrip: Mage Hand, Mending
-         1st Level: False Life, Grease, Detect Magic, Expiditious Retreat 
-         2nd Level: Heat Metal, Invisibility 
-       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
-       - Infusions Known: 4     
-       - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
-       
-   - - Battle Smith Abilities:
-       - Tool Proficiency: Proficiency with Tinker's Tools, Thieve's Tools and Smith's Tools
-       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 15
-         3rd Level: Heroism, Shield
-         5th Level: Branding Smite, Warding Bond
-       - Battle Ready: Proficient with Martial Weapons. When attacking with magic weapons can add intelligence modifier instead of strength or dexterity modifier to attack and damage rolls
-       - Steel Defender: Can build a clockwork creature with the Steel Defender Stat Block once per long rest  
-       - Extra Attack: Can take a second attack action each turn
-       
-   - - Steel Defender Abilities: Iron Mastiff
-        - Armor Class: 15
-        - Hit Points: 2+ your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
-        - Speed: 40
-        - str: 14
-        - dex: 12
-        - con: 14
-        - int: 4
-        - wis: 10
-        - cha: 6
-        - Proficiencies: Proficiency Bonus + - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
-        - Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
-        - Darkvision: 60ft. Passive Perception 22
-        - Vigilant: Can't be surprised
-        - Force Empowered Rend: Using a + Spellcasting modifier to hit one target within 5ft. Deals 1d8+PB force damage.
-        - Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
-        - Extra Attack: Can take a second attack action each turn
-        - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
-                          The attacker takes 1d4+8 force damage. 
-        - Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
-
-       
     special-abilities:
-       - Proficiencies: Alchemy, Persuasion, Athletics, Stealth, Athletics, Thieves' tools, Tinker Tools, History, Perception, Smith's tools
-       - Feats: N/A
-       
+    - Proficiencies: Alchemy, Persuasion, Athletics, Stealth, Athletics, Thieves' tools, Tinker Tools, History, Perception, Smith's tools
+      Feats: N/A
+
     attacks: |
       2 attacks with claws, x-wing crossbow or clockwork daggers
     combat-tactics: |
       Darts about landing clockwork daggers and letting them unwind. Then backs off to fire his X-Wing Crossbow. Usually the noise is enough to disturb most people.
     special-equipment:
     - X-wing Multi-Arrow Crossbow: +2 - Shoots 4 bolts at once. One round to load. Afar is skilled with this and can move freely while reloading. (1d6 +2 dmg each)
-    - Clockwork Daggers: - If Afar has wound the hilt of this dagger and strikes an opponent he can let the dagger go to unwind inside the target's flesh causing 1d6 damage per round for 3 rounds or until the target removes it 
+      Clockwork Daggers:  If Afar has wound the hilt of this dagger and strikes an opponent he can let the dagger go to unwind inside the target's flesh causing 1d6 damage per round for 3 rounds or until the target removes it 
                           from their flesh. He carries a 4 of these prize inventions.
-    
-    
+
   profile:
 
     #
@@ -541,12 +539,7 @@ npc:
      himself to his processes of invention, he has become a sort of wandering Don Quixote figure. This inventor cat-man with scruffy beard, pronounced tabard, bronze morion, and iron mastiff, is looking to bring light to the
      lives of others through his wild inventions. With his natural charm accented by his 'lost kitty' Quixotic creativity, he has established himself as a local merchant who incomprehensibly wheels and deals in his inventions
      and other remarkable goods. He is always rummaging through the city garbage and will never turn down purchasing 'trade-in' oddities and 'another man's garbage'.
-
-
-
-
-
-      
+ 
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -558,33 +551,3 @@ npc:
     personality: |
      Afar, as he is generally known, is a strange old cat-man. A talented and inventive artificer, he mostly uses found materials and traded garbage for his inventions. In his advanced age he is gradually going senile and has
      more and more frequent bouts of delirium which make him quite the character.
-     
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
